# nauvoo

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.claude/backups/: .pytest_cache_v_cache_lastfailed.20260307-192026
docs/plans/: 2026-03-07-nauvoo-impl.md  2026-03-07-separate-oauth-tokens-design.md  2026-03-07-separate-oauth-tokens-impl.md
src/nauvoo/: daemon.py
src/nauvoo/adapters/driven/: filesystem_vault.py  google_auth.py  google_drive_writer.py
src/nauvoo/adapters/driving/: polling_watcher.py
src/nauvoo/application/: coordinator.py
src/nauvoo/domain/: callout_parser.py  callout_stamper.py
src/nauvoo/ports/driven/: drive_writer.py  vault_reader.py
src/nauvoo/ports/driving/: vault_watcher.py
tests/unit/: test_callout_parser.py  test_callout_stamper.py  test_coordinator.py  test_filesystem_vault.py  test_google_auth.py  test_google_drive_writer.py
