[project]
name = "nauvoo"
version = "0.1.0"
description = "Push daemon — syncs Obsidian markdown callouts back to Google Drive comments"
requires-python = ">=3.12"
authors = [{ name = "Peter O'Connor", email = "poconnor@stackoverflow.com" }]
readme = "README.md"

dependencies = []

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]

[project.scripts]
nauvoo = "nauvoo.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nauvoo"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nauvoo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may need credentials)",
]

[tool.coverage.run]
source = ["nauvoo"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
